[package]
name = "dice_shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "dice_shared"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tnet = { path = "../../tnet", features = ["transaction"]}
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.9.0-alpha.2"
tlogger = { path = "../../t-logger"}